# exploring-cpp20

./: CMakeLists.txt  LICENSE.txt  README.md  errata.md  format  index.html  run_test.py
code-modules/: Exploring C++ 20.html  index.html  test.cpp
code-modules/chap01/: list0102.cpp
code-modules/chap02/: CMakeLists.txt  list0201.cpp  list0201.test  list0202.cpp  list0203.cpp  list0203.test  snip0201.txt  snip0202.txt  snip0203.cpp  snip0203.hh  snip0203.test
code-modules/chap03/: list0301.cpp  list0302.cpp  list0303.cxx  list0304.cxx  list0305.cpp  list0305.input  snip0301.txt  snip0302.txt  snip0304.txt  snip0306.cpp  snip0307.cpp
code-modules/chap04/: CMakeLists.txt  list0401.cpp  list0401.test  list0402.cpp  list0403.cpp  list0404.cpp  list0404.test  list0405.cpp  list0406.cpp  snip0401.cpp  snip0401.hh  snip0402.cpp  snip0402.hh
code-modules/chap05/: CMakeLists.txt  list0501.cpp  list0501.test  list0502.cpp  list0502.test  list0503.cpp  list0504.cpp  snip0501.txt
code-modules/chap06/: list0601-fixed  list0601-fixed.cc
code-modules/chap07/: CMakeLists.txt  list0701.cpp  list0702.cxx  list0703.cpp  list0703.test  list0704.cxx  list0705.cpp
code-modules/chap08/: list0801.cxx  list0802.cpp  list0802.test  list0803.cpp  list0803.test  list0804.cpp  list0805.cpp  list0806.cpp  list0806.test  list0807.cpp  list0807.test  list0808.cpp  snip0801.hh  snip0801.test  snip0802.cpp  snip0802.test  snip0803.cpp  snip0803.test  snip0804.cpp  snip0804.hh
code-modules/chap09/: list0901.cpp  list0901.test  snip0902.cpp  snip0902.hh
code-modules/chap10/: list1001.cpp  list1002.cpp  list1002.input  list1003.cpp  snip1002.txt  snip1003.txt
code-modules/chap11/: list1101.cpp  list1102.cxx  list1103.cpp  list1104.cpp  list1104.input  snip1101.hh  snip1103.hh  snip1104.hh  snip1105.cpp
code-modules/chap12/: CMakeLists.txt  list1201.cpp  list1201.test  list1202.cpp  list1202.test  list1203.cxx  list1204.cpp  list1205.cpp  list1206.cpp  list1206.test  snip1202.cpp  snip1203.hh
code-modules/chap13/: CMakeLists.txt~  list1301.cxx  list1302.cpp  list1302.input  list1303.cpp  list1304.cxx  snip1302.txt  snip1303.cpp  snip1303.hh
code-modules/chap14/: list1401.cpp  list1402.cpp  list1403.cpp  list1403.test
code-modules/chap15/: list1501.cpp  list1502.cpp  list1502.test  list1503.cpp  list1503.input  list1503.test  list1504.cpp  list1504.test  snip1501.hh  snip1502.hh
code-modules/chap16/: list1601.cpp  list1602.cpp
code-modules/chap17/: list1701.cpp  list1702.cpp  list1703.cpp  list1703.test
code-modules/chap18/: CMakeLists.txt  list1801.cpp  list1802.cpp  list1803.cpp  list1803.input  list1804.cpp  list1804.input  list1804.test  snip1801.hh  snip1802.hh  snip1803.cpp
code-modules/chap19/: CMakeLists.txt  list1901.cpp
code-modules/chap20/: CMakeLists.txt  list2001.cpp  list2002.cpp  list2002.test  list2003.cpp  snip2001.hh  snip2002.cpp  snip2002.hh
code-modules/chap21/: CMakeLists.txt~  list2101.cpp  list2102.cpp  snip2101.cpp  snip2102.hh  snip2103.hh  snip2104.hh  snip2106.cpp  snip2106.hh  snip2107.cpp  snip2108.cpp  snip2108.hh  snip2111.hh
code-modules/chap22/: CMakeLists.txt  list2201.cpp  list2202.cpp  list2203.cpp  list2203.hh  list2204.cpp  list2205.cpp  snip2202.txt
code-modules/chap23/: list2301.cpp  list2302.hh  list2302.test  list2303.hh  list2304.cpp  list2304.test  list2305.cpp  list2305.hh  list2305.test
code-modules/chap24/: CMakeLists.txt  list2401.cpp  list2402.cpp  list2402.input  list2403.cpp  list2404.cxx  list2405.cpp  list2405.test  list2406.cpp  snip2402.txt  snip2404.hh  snip2405.hh  snip2406.cpp  snip2406.hh  snip2406.test  snip2407.cpp
code-modules/chap25/: list2501.cpp  list2502.cpp  list2502.input  snip2501.cpp  snip2501.hh  snip2502.cpp  snip2503.cpp  snip2505.cpp
code-modules/chap26/: list2601.cpp  list2601.test  list2602.cpp  list2603.cpp  list2604.cpp  list2605.cpp  list2606.cxx  snip2601.cpp  snip2602.cpp  snip2603.cpp  snip2604.hh  snip2606.hh
code-modules/chap27/: CMakeLists.txt  list2701.txt  list2702.cpp  list2703.cpp  list2703.test  list2704.test  snip2702.txt  snip2703.hh  snip2703.test  snip2704.cpp
code-modules/chap28/: Doxyfile  list2801.cpp  list2801.test  snip2802.cpp  snip2802.hh  snip2803.cpp  snip2804.cpp
code-modules/chap29/: CMakeLists.txt  Doxyfile  bmi.test  list2901.txt
code-modules/chap30/: list3001.cpp  list3002.cpp  list3003.cpp  list3004.cpp  list3004.test  list3005.cpp  list3005.test  snip3001.hh  snip3002.hh
code-modules/chap31/: list3101.cpp  list3102.hh  list3103.cpp  list3104.cpp  list3105.cpp  list3105.cpp~  list3105.inc0  list3107.cpp  list3107.hh  list3108.cpp  list3108.cpp~  list3108.inc0  list3109.cpp  list3109.hh~  list3110.cpp  list3111.cpp  list3111.hh  list3112.cpp  list3112.cpp~  list3112.test  rational_class.hpp  snip3101.cpp
code-modules/chap32/: CMakeLists.txt  list3201.hh~  list3202.cpp  list3202.hh  list3203.cpp  list3203.cpp~  list3203.test
code-modules/chap33/: CMakeLists.txt  list3301.cpp  list3302.cpp  list3303.hh  list3304.cpp  list3305.cpp  list3305.cpp~  snip3301.cpp  snip3302.cpp
code-modules/chap34/: CMakeLists.txt  list3402.hh  list3403.cpp  list3403.test  list3404.cpp  list3406.cpp  list3406.test  snip3401.cpp  snip3401.hh  snip3403.cpp  snip3404.cpp  snip3405.hh  snip3406.hh  snip3407.cpp
code-modules/chap35/: bmi.hpp  list3501.cpp  list3502.cpp  list3502.test  list3503.cpp  list3503.hh  list3504.cpp  list3504.cpp~  list3504.inc0  list3504.test
code-modules/chap74/step5/: CMakeLists.txt  node.cpp  variables.hpp
code-preprocessor/: CMakeLists.txt  Exploring C++ 20.html  index.html  test.hpp
code-preprocessor/chap74/step3/: CMakeLists.txt  node_impl.hpp  parse.cpp  variables.cpp
code-preprocessor/chap74/step4/: CMakeLists.txt  calc.cpp  calc_error.cpp  node_impl.cpp  parse.cpp  test_parse.cpp  variables.hpp
code-preprocessor/chap74/step6/: CMakeLists.txt  test_node.cpp  test_number.cpp
(+1594 files in other folders)
